--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,17 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+PROJ_GROUP=com.canyinghao
+PROJ_VERSION=1.0.0
+PROJ_NAME=canadapter
+PROJ_WEBSITEURL=https://github.com/canyinghao/CanAdapter
+PROJ_ISSUETRACKERURL=
+PROJ_VCSURL=git@github.com:canyinghao/CanAdapter.git
+PROJ_DESCRIPTION=android adapter helper
+PROJ_ARTIFACTID=com-canyinghao-canadapter
+
+DEVELOPER_ID=canyinghao
+DEVELOPER_NAME=canyinghao
+DEVELOPER_EMAIL=canyinghao@hotmail.com
