--- a/canadapter/build.gradle
+++ b/canadapter/build.gradle
@@ -20,7 +20,17 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
-
     compile 'com.android.support:recyclerview-v7:23.0.1'
 }
+
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1"
+    }
+}
+apply from: 'https://raw.githubusercontent.com/msdx/gradle-publish/master/bintray.gradle'
