--- a/gradle.properties
+++ b/gradle.properties
@@ -21,12 +21,12 @@
 
 PROJ_GROUP=com.canyinghao
 PROJ_VERSION=1.0.1
-PROJ_NAME=canadapter
+PROJ_NAME=can-adapter
 PROJ_WEBSITEURL=https://github.com/canyinghao/CanAdapter
 PROJ_ISSUETRACKERURL=
 PROJ_VCSURL=git@github.com:canyinghao/CanAdapter.git
 PROJ_DESCRIPTION=android adapter helper
-PROJ_ARTIFACTID=canadapter
+PROJ_ARTIFACTID=can-adapter
 
 DEVELOPER_ID=canyinghao
 DEVELOPER_NAME=canyinghao
