--- a/canadapter/build.gradle
+++ b/canadapter/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         minSdkVersion 11
@@ -20,8 +20,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:recyclerview-v7:23.0.1'
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
 }
 
 
@@ -34,4 +34,4 @@ buildscript {
         classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1"
     }
 }
-apply from: 'https://raw.githubusercontent.com/msdx/gradle-publish/master/bintray.gradle'
+//apply from: 'https://raw.githubusercontent.com/msdx/gradle-publish/master/bintray.gradle'
