--- a/gradle.properties
+++ b/gradle.properties
@@ -20,13 +20,13 @@
 
 
 PROJ_GROUP=com.canyinghao
-PROJ_VERSION=1.0.3
-PROJ_NAME=can-adapter
+PROJ_VERSION=1.0.4
+PROJ_NAME=canadapter
 PROJ_WEBSITEURL=https://github.com/canyinghao/CanAdapter
 PROJ_ISSUETRACKERURL=
 PROJ_VCSURL=git@github.com:canyinghao/CanAdapter.git
 PROJ_DESCRIPTION=android adapter helper
-PROJ_ARTIFACTID=can-adapter
+PROJ_ARTIFACTID=canadapter
 
 DEVELOPER_ID=canyinghao
 DEVELOPER_NAME=canyinghao
