--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'android-apt'
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         applicationId "com.canyinghao.canadapterdemo"
-        minSdkVersion 11
-        targetSdkVersion 23
+        minSdkVersion 9
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
@@ -22,11 +22,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
 
-    compile 'com.jakewharton:butterknife:7.0.1'
-
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.nineoldandroids:library:2.4.0'
     compile project(':canadapter')
 
 
