--- a/canadapter/bintray.gradle
+++ b/canadapter/bintray.gradle
@@ -28,7 +28,7 @@ javadoc {
         author true
         version true
         links "http://docs.oracle.com/javase/7/docs/api"
-        title PROJ_ARTIFACTID
+        title "$PROJ_NAME $PROJ_VERSION"
     }
 }
 
@@ -97,13 +97,6 @@ bintray {
 
             gpg {
                 sign = true
-            }
-
-            mavenCentralSync {
-                sync = project.hasProperty('SONATYPE_USER') && project.hasProperty('SONATYPE_KEY')
-                user = project.hasProperty('SONATYPE_USER') ? project.property('SONATYPE_USER') : ""
-                password = project.hasProperty('SONATYPE_PASS') ? project.property('SONATYPE_PASS') : ""
-                close = '1'
             }
         }
     }
