--- a/canadapter/build.gradle
+++ b/canadapter/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 19
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -25,15 +25,15 @@ dependencies {
 }
 
 
-//buildscript {
-//    repositories {
-//        jcenter()
-//    }
-//    dependencies {
-//
-//        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
-//        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1"
-//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
-//    }
-//}
-//apply from: 'bintray.gradle'
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+    }
+}
+apply from: 'bintray.gradle'
